--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "svelte-ts-sass",
+  "version": "0.0.0",
+  "description": "svelte-ts-sass",
+  "main": "server.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public"
   },
+  "author": {
+    "name": "robberr"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@types/node": "^8.10.64",
+    "rollup": "^2.27.1",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "rollup-plugin-svelte": "^6.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.25.1"
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@wessberg/rollup-plugin-ts": "^1.3.4",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
-    "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.3.0"
+    "pug": "^3.0.0",
+    "sirv-cli": "^1.0.6",
+    "svelte-check": "^1.0.45",
+    "svelte-preprocess": "^4.3.0",
+    "typescript": "^4.0.3"
   }
 }
